duniverse/menhirLib.20200211/test/static/bad/pattern.mly
%%

let main :=
  (_, %prec hop) = bar
    {}
